add local test suite